--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <div id="heading">
-    <img src="./assets/Pokémon_GO_logo.svg.png" alt="pokemon logo" width="200px">
+    <img src="./Pokémon_GO_logo.svg.png" alt="pokemon logo" width="200px">
     <h1>Discover your ideal Pokemon! Click the pokeball</h1>
     <div id="pokebola-container">
-        <img id="pokebola" src="./assets/pokebola.png" alt="pokebola" width="500px">
+        <img id="pokebola" src="./pokebola.png" alt="pokebola" width="500px">
     </div>
 </div>
   
